Fix scrolling wrap on restaurant nodes

--- a/client/src/components/NodeView/NodeContent/RestaurantContent/RestaurantContent.scss
+++ b/client/src/components/NodeView/NodeContent/RestaurantContent/RestaurantContent.scss
@@ -56,7 +56,7 @@
     }
 
     .scrollable {
-      max-height: 70vh;
+      max-height: 50vh;
       overflow: auto;
     }
   }
